# Watson

./: .env.example  .gitignore  README.md  SETUP.md  agents.md  example_run.py  pyproject.toml  requirements.txt
backend/: backend.py  example_report.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ReportPage.tsx  main.tsx
scripts/: __init__.py  collect_data.py  manage_datasets.py
src/: __init__.py  agent.py  backend.py  colors.py  config.py  environment.py  episode.py  reward.py  scenarios.py
src/agents/: db_agent.py  reward_agent.py  watson_agent.py
src/api/: backend.py
src/prompts/: __init__.py  agent.py  environment.py  reward.py
src/scenarios/: __init__.py  infostealer_email_attachment.yaml  phishing_credential_harvesting.yaml  scenarios.py
src/training/: dev.py  lit_agent.py  train.py
src/utils/: config.py
virustotal/: app_mrtea.py
wandb/: latest-run
wandb/run-20251122_120255-83t3hylz/: run-83t3hylz.wandb
wandb/run-20251122_120255-83t3hylz/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251122_121019-md3tfqq3/: run-md3tfqq3.wandb
wandb/run-20251122_121019-md3tfqq3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251122_121220-eez115f3/: run-eez115f3.wandb
wandb/run-20251122_121220-eez115f3/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251122_121546-m19q89jp/: run-m19q89jp.wandb
wandb/run-20251122_121546-m19q89jp/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251122_122440-b1d39rhf/: run-b1d39rhf.wandb
wandb/run-20251122_122440-b1d39rhf/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_122728-9psahydj/: run-9psahydj.wandb
wandb/run-20251122_122728-9psahydj/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_122848-ks1ewart/: run-ks1ewart.wandb
wandb/run-20251122_122848-ks1ewart/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_122953-msck78s6/: run-msck78s6.wandb
wandb/run-20251122_122953-msck78s6/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_123352-11orf7cw/: run-11orf7cw.wandb
wandb/run-20251122_123352-11orf7cw/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_123431-qfefiy33/: run-qfefiy33.wandb
wandb/run-20251122_123431-qfefiy33/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_123508-c1n14hhm/: run-c1n14hhm.wandb
wandb/run-20251122_123508-c1n14hhm/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251122_124836-wfe3kmmy/: run-wfe3kmmy.wandb
wandb/run-20251122_124836-wfe3kmmy/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_125026-hd4hipcn/: run-hd4hipcn.wandb
wandb/run-20251122_125026-hd4hipcn/files/: config.yaml  wandb-metadata.json
wandb/run-20251122_125229-apfiajgl/: run-apfiajgl.wandb
(+7 files in other folders)
